# cp-tp2

./: .gitignore  CMakeLists.txt  input.txt  readme
include/: bool_matrix.h  char_matrix.h  cmatrix.h  init_parser.h  matrix.h  sequential_life_game.h
src/: bool_matrix.c  char_matrix.c  cmatrix.c  init_parser.c  main.c  sequential_life_game.c
